Fix spacing between elements within cards

--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,26 @@ body {
 nav {
   display: flex;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
   background-color: white;
   color: black;
   width: 100vw;
   box-shadow: 0px 8px 14px -5px rgba(0,0,0,0.18);
+  margin-bottom: 10%;
 }
 
 nav div {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+figure {
+  width: 100%;
 }
 
 /* nav::after {
@@ -29,11 +39,22 @@ nav div {
   box-shadow: 0px 8px 14px -5px rgba(0,0,0,0.18);
 } */
 
+/* .spacer-container {
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100%;
+} */
+
 .spacer {
   height: 1%;
   position: absolute;
+  top: 16%;
+  left: 50%;
   z-index: -1;
-  width: 100%;
+  width: 100vw;
+  transform: translate(-50%, -90%);
+  /* margin-top: 7%; */
   /* background-color: white; */
   background: rgb(237,166,146);
   background: linear-gradient(90deg, #EA8372 0%, #FFB88C 100%);
@@ -48,12 +69,16 @@ nav div {
 }
 
 .nav-dark {
-  background-color: #36454F;
+  background: rgb(14,20,29);
+  background: linear-gradient(180deg, rgba(14,20,29,1) 0%, rgba(49,60,75,1) 100%);
+
   color: white;
 }
 
 .body-dark {
-  background-color: #4A646C;
+  background: rgb(14,20,29);
+  background: linear-gradient(0deg, rgba(14,20,29,1) 0%, rgba(49,60,75,1) 100%);
+  color: white;
 }
 
 
@@ -70,6 +95,8 @@ ul {
 }
 
 ul li {
+  position: relative;
+  z-index: 1;
   cursor: pointer;
   text-transform: capitalize;
   font-weight: 300;
@@ -87,20 +114,35 @@ ul li {
   -webkit-font-smoothing: antialiased;
 }
 
-.one::before {
-  position: relative;
-  font-family: "Font Awesome 5 Free";
-  content: "\f2bb";
+ul li::before {
   display: inline-block;
+  position: relative;
   padding-right: 3px;
   vertical-align: middle;
-  font-weight: 900;
   font-size: 12px;
-  z-index: 0;
+  z-index: 1;
   font-style: normal;
-font-variant: normal;
-text-rendering: auto;
--webkit-font-smoothing: antialiased;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+
+.one::before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f2bb";
+  font-weight: 900;
+}
+
+.two::before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f3e0";
+  font-weight: 900;
+}
+
+.three::before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f72f";
+  font-weight: 900;
 }
 
 li::after {
@@ -112,22 +154,23 @@ li::after {
   background: rgb(237,166,146);
   background: linear-gradient(90deg, rgba(237,166,146,1) 0%, rgba(255,201,163,1) 100%);
   transition: all 0.2s 0s ease;
+  z-index: 0;
 }
 
 .one::after {
-  transform: translate(-55px, 17px)
+  transform: translate(-55px, 17px);
 }
 
 .two::after {
-  transform: translate(-66px, 17px)
+  transform: translate(-54px, 17px);
 }
 
 .three::after {
-  transform: translate(-120px, 17px)
+  transform: translate(-68px, 17px);
 }
 
 li:hover::after {
-  width: 100%;
+  width: 80%;
 }
 
 /* .two:hover::after {
@@ -171,6 +214,9 @@ ul:nth-child(2) {
 ul:nth-child(3) {
   list-style-type: "🤞"
 } */
+main {
+  margin-top: 8%;
+}
 
 main section {
   display: grid;
@@ -318,6 +364,7 @@ img {
 
 .num-text {
   margin-top: 3%;
+  color: #333333;
 }
 
 .text-container h2 {
@@ -325,12 +372,18 @@ img {
   margin-top: 3%;
 }
 
+.text-container h4 {
+  margin: 2% 0;
+}
+
 .card-box {
   background-color: lightgray;
+  margin: 2% 0;
 }
 
 .card-box p {
   margin: 9px 0;
+  margin-left: 3%;
 }
 
 @media screen and (max-width: 962px) {
@@ -358,13 +411,13 @@ img {
   }
 
   .one:hover::after {
-    width: 58px;
+    width: 56px;
   }
   .two:hover::after {
-    width: 68px;
+    width: 56px;
   }
   .three:hover::after {
-    width: 122px;
+    width: 70px;
   }
 }
 
